--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section class="first-screen">
             <header class="header">
                 <div class="header-row">
-                    <div class="logo"><a href="#!"><img src="./img/icons/mobiuz-logo.svg" alt="Логотип Mobiuz"></a></div>
+                    <div class="logo"><a href="https://vallgart.github.io/mobiwin-uz/"><img src="./img/icons/mobiuz-logo.svg" alt="Логотип Mobiuz"></a></div>
                         <nav class="nav-desktop">
                             <ul>
                                 <li><a href="#participation">Shartlar</a></li>
@@ -28,7 +28,7 @@
                         </nav>
                         <div class="toggles_row">
                             <div class="toggle">
-                                <a href="">RU</a>
+                                <a href="https://vallgart.github.io/mobiwin-ru/">RU</a>
                             </div>
                             <button class="toggle-mobile">
                                 <svg class="icon" aria-hidden="true" width="40" height="40"><use href="#icon-burger" /></svg>
@@ -800,5 +800,6 @@
         </svg>
     </symbol>
 </svg>
+
 
 </html>
