--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
                     <div class="banner_middle">
 
-                        <span class="span-desktop">Mobil ilovani yuklab oling va MobiIWin 2.0 aksiyasida ishtirok eting</span>
+                        <span class="span-desktop">Mobil ilovani yuklab oling va MobiWin 2.0 aksiyasida ishtirok eting</span>
                         
                     </div>
                     
@@ -803,3 +803,4 @@
 
 
 </html>
+
