--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        document.documentElement.classList.add("preload-lock");
+    </script>
     <title>Mobiwin 2.0</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/fonts.css">
@@ -16,7 +19,7 @@
         <section class="first-screen">
             <header class="header">
                 <div class="header-row">
-                    <div class="logo"><a href="https://vallgart.github.io/mobiwin-uz/"><img src="./img/icons/mobiuz-logo.svg" alt="Логотип Mobiuz"></a></div>
+                    <div class="logo"><a href="#!"><img src="./img/icons/mobiuz-logo.svg" alt="Логотип Mobiuz"></a></div>
                         <nav class="nav-desktop">
                             <ul>
                                 <li><a href="#participation">Shartlar</a></li>
@@ -28,7 +31,7 @@
                         </nav>
                         <div class="toggles_row">
                             <div class="toggle">
-                                <a href="https://vallgart.github.io/mobiwin-ru/">RU</a>
+                                <a href="">RU</a>
                             </div>
                             <button class="toggle-mobile">
                                 <svg class="icon" aria-hidden="true" width="40" height="40"><use href="#icon-burger" /></svg>
@@ -801,6 +804,4 @@
     </symbol>
 </svg>
 
-
 </html>
-
