--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         </a>
                         <a target="_blank" href="https://go.2gis.com/07jqV" class="call-to-us__item">
                             <svg class="icon" aria-hidden="true" width="40" height="40"><use href="#icon-location" /></svg>
-                            100000, O‘zbekiston, Amir Temur shoh ko‘chasi, 24
+                            100000, Toshkent shahar, Amir Temur shoh ko‘chasi, 24
                         </a>
                     </div>
 
@@ -645,14 +645,14 @@
                                 <li>Mazkur Qoidalarning 7-bandida ko‘rsatilgan hujjatlarda G‘olib tomonidan yolg‘on ma’lumot taqdim etilganligi aniqlanganda.</li>
                             </ul>
                         </li>
-                        <li>11.	Aksiya natijalari bekor qilingan taqdirda, Kompaniya sovrinni qayta o‘ynash huquqini o‘zida saqlab qoladi;</li>
+                        <li>Aksiya natijalari bekor qilingan taqdirda, Kompaniya sovrinni qayta o‘ynash huquqini o‘zida saqlab qoladi;</li>
                         <li>Agar Aksiya G‘olibi Toshkent shahrida yashamasa, “UMS” MChJ G‘olibning Toshkent shahriga kelishi bilan bog‘liq har qanday xarajatlarni (Toshkent shahriga borish va qaytish yo‘l haqi, mehmonxonada joylashish, ovqatlanish va boshqalar), shuningdek sovrinni G‘olibning yashash manziliga yoki boshqa manzilga yetkazib berish bilan bog‘liq xarajatlarni qoplash majburiyatini o‘z zimmasiga olmaydi;</li>
-                        <li>13.	Sovrinni rasmiylashtirish/olish jarayonida G‘olib rasmiylashtirish/olish jarayoni bilan bog‘liq barcha zarur hujjatlarni imzolash majburiyatini oladi, unda Abonentning shaxsiy ma’lumotlari hamda Sovrin to‘g‘risidagi to‘liq ma’lumot ko‘rsatiladi. Aksiya G‘olibining zarur hujjatlarni imzolashdan va/yoki sovrinni olish jarayonida talab etilgan hujjatlarni taqdim etish kabi boshqa yuridik ahamiyatga ega harakatlarni bajarishdan bosh tortishi, G‘olibning sovrinni olishdan bosh tortishi sifatida baholanadi;</li>
-                        <li>14.	Pul Sovrinini rasmiylashtirish/olish jarayonida G‘olib sovrinni olish jarayonini Kompaniyaning rasmiy sahifalarida foydalanish va e’lon qilish uchun foto va video tasvirga olishga o‘z roziligini beradi;</li>
-                        <li>15.	“UMS” MChJ pul mablag‘ini naqd shaklda to‘lash majburiyatini o‘z zimmasiga olmaydi;</li>
-                        <li>16.	Aksiya G‘oliblari tomonidan sovrin talab qilinmagan yoki har qanday sababga ko‘ra sovrinni olishdan bosh tortilgan taqdirda, Kompaniya talab qilinmagan sovrinlarni qayta o‘ynash huquqini o‘zida saqlab qoladi;</li>
-                        <li>17.	“UMS” MChJ mazkur Qoidalarning barcha talablari va shartlari G‘olib tomonidan bajarilmagan taqdirda, G‘olibga sovrin berishni rad etish huquqini o‘zida saqlab qoladi;</li>
-                        <li>18.	“UMS” MChJ quyidagilar uchun javobgar emas: 
+                        <li>Sovrinni rasmiylashtirish/olish jarayonida G‘olib rasmiylashtirish/olish jarayoni bilan bog‘liq barcha zarur hujjatlarni imzolash majburiyatini oladi, unda Abonentning shaxsiy ma’lumotlari hamda Sovrin to‘g‘risidagi to‘liq ma’lumot ko‘rsatiladi. Aksiya G‘olibining zarur hujjatlarni imzolashdan va/yoki sovrinni olish jarayonida talab etilgan hujjatlarni taqdim etish kabi boshqa yuridik ahamiyatga ega harakatlarni bajarishdan bosh tortishi, G‘olibning sovrinni olishdan bosh tortishi sifatida baholanadi;</li>
+                        <li>Pul Sovrinini rasmiylashtirish/olish jarayonida G‘olib sovrinni olish jarayonini Kompaniyaning rasmiy sahifalarida foydalanish va e’lon qilish uchun foto va video tasvirga olishga o‘z roziligini beradi;</li>
+                        <li>“UMS” MChJ pul mablag‘ini naqd shaklda to‘lash majburiyatini o‘z zimmasiga olmaydi;</li>
+                        <li>Aksiya G‘oliblari tomonidan sovrin talab qilinmagan yoki har qanday sababga ko‘ra sovrinni olishdan bosh tortilgan taqdirda, Kompaniya talab qilinmagan sovrinlarni qayta o‘ynash huquqini o‘zida saqlab qoladi;</li>
+                        <li>“UMS” MChJ mazkur Qoidalarning barcha talablari va shartlari G‘olib tomonidan bajarilmagan taqdirda, G‘olibga sovrin berishni rad etish huquqini o‘zida saqlab qoladi;</li>
+                        <li>“UMS” MChJ quyidagilar uchun javobgar emas: 
                             <ul>
                                 <li>ishtirokchilarning g‘oliblar to‘g‘risidagi ma’lumotlar bilan mobi.uz saytida tanisha olmasligi;</li>
                                 <li>qo‘ng‘iroq qilish va/yoki SMS-xabarnoma yuborish vaqtida abonent raqamining bloklangan holatda bo‘lishi;</li>
