--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </nav>
                         <div class="toggles_row">
                             <div class="toggle">
-                                <a href="">RU</a>
+                                <a href="https://vallgart.github.io/mobiwin-ru/">RU</a>
                             </div>
                             <button class="toggle-mobile">
                                 <svg class="icon" aria-hidden="true" width="40" height="40"><use href="#icon-burger" /></svg>
@@ -803,5 +803,6 @@
         </svg>
     </symbol>
 </svg>
+
 
 </html>
